# ArchiDreamZ-Paratranz

./: .env  .gitignore  Paratranz格式双向转换项目-AI描述词关键词.md  README.md  main.py  old-Paratranz格式双向转换项目-AI描述词.txt  old-使用说明.txt  pyproject.toml  requirements.txt  sync.py  使用说明.md  运行.bat
.github/workflows/: sync.yaml
1-SourceFile/language/lang/: ru_RU.lang
1-SourceFile/txt/LOTR/names/: anduinMen_female.txt
1-SourceFile/其他语言参考/en_US/language/lang/: en_US.lang
2-ConvertedParatranzFile/CustomNPCs/dialogs/The Fellowship/: 4.json.json
2-ConvertedParatranzFile/CustomNPCs/quests/The Way of the Hobbit/: 27.json.json
2-ConvertedParatranzFile/language/lang/: ru_RU.lang.json
2-ConvertedParatranzFile/txt/LOTR/lore/: a dwarf.txt.json
3-TranslatedParatranzFile/txt/LOTR/names/: anduinMen_female.txt.json
4-SourceTranslatedFile/CustomNPCs/dialogs/The Fellowship/: 4.json
4-SourceTranslatedFile/CustomNPCs/quests/The Way of the Hobbit/: 27.json
4-SourceTranslatedFile/language/lang/: ru_RU.lang
Code/: main.py
old-Code/: main.py
resource/2-ConvertedParatranzFile/LOTRReworked/lang/: ru_RU.lang.json
resource/2-ConvertedParatranzFile/LOTRReworked/names/: anduinMen_female.txt.json
resource/3-TranslatedParatranzFile/LOTRReworked/lang/: ru_RU.lang.json
resource/3-TranslatedParatranzFile/LOTRReworked/lore/: a dwarf.txt.json
resource/3-TranslatedParatranzFile/LOTRReworked/names/: anduinMen_female.txt.json
resource/4-SourceTranslatedFile/LOTRReworked/lang/: zh_CN.lang
src/: __init__.py  config.py  core.py  exception.py  huijiwiki.py  log.py  paratranz.py
(+2336 files in other folders)
