[project]
name = "ArchiDreamZ-Paratranz"
dynamic = [ "version", "readme", "dependencies" ]
description = "半自动化汉化 Minecraft 模组小工具"
authors = [
    {name = "Number_Sir",email = "number_sir@126.com"}
]
maintainers = [
    { name = "Number_Sir", email = "number_sir@126.com" }
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["lotr", "paratranz", "minecraft", "translation"]


[project.urls]
repository = "https://github.com/NumberSir/ArchiDreamZ-Paratranz"
documentation = "https://github.com/NumberSir/ArchiDreamZ-Paratranz/README.md"
issues = "https://github.com/NumberSir/ArchiDreamZ-Paratranz/issues"

[tool.poetry]
package-mode = false
version = "0.0.1-alpha"
readme = [ "README.md" ]
exclude = [".env", ".venv", ".idea", ".vscode"]
requires-poetry = ">=2.0"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
loguru = "^0.7.3"
python-dotenv = "^1.1.1"
poetry-core = "^2.1.3"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
chardet = "^5.2.0"
selenium = "^4.34.0"
httpx = "^0.28.1"
paratranz-client = {git = "https://github.com/MuXiu1997/ParaTranz-SDK-python.git"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
